Initial commit - Adds line count information

--- a/edk2toolext/environment/reporttypes/templates/usage_report_template.html
+++ b/edk2toolext/environment/reporttypes/templates/usage_report_template.html
@@ -41,10 +41,22 @@
             <div id="summary" class="tab-pane fade show active" role="tabpanel" aria-labelledby="summary-tab">
                 <div class="row align-items-center">
                     <div class="col-md-6">
+                        {{ total_pie_chart }}
+                    </div>
+                    <div class="col-md-6">
                         {{ comp_pie_chart }}
                     </div>
                     <div class="col-md-6">
                         {{ lib_pie_chart }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ total_src_pie_chart }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ comp_src_pie_chart }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ lib_src_pie_chart }}
                     </div>
                 </div>
                 <div class="row align-items-left">
